# Mathics3-django

./: CHANGES.rst  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  README.rst  package.json  pyproject.toml  setup.py
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
admin-tools/: make-dist.sh  pyenv-versions
mathics_django/: manage.py
mathics_django/web/: format.py
mathics_django/web/controllers/: about.py
mathics_django/web/media/css/: styles.css
mathics_django/web/media/js/: mathics.js
mathics_django/web/media/js/mathics-threejs-backend/: index.js
mathics_django/web/media/js/mathjax/: MathJax.js
mathics_django/web/templates/: base_html.html
