[build-system]
requires = ["setuptools"]

build-backend = "setuptools.build_meta"

[project]
name = "Mathics3-Django"
description = "A Django-based frontend for Mathics3"
dependencies = [
     "Django >= 3.1",
     "Mathics3 > 9.0",
     "Mathics3_Scanner > 9.0",
     "pygments", # For colorized Python tracebacks
     "requests",
     "scikit-image; sys_platform == 'darwin'",
]
requires-python = ">=3.11"
readme = "README.rst"
license = "GPL-3.0-or-later"
maintainers = [
    {name = "Mathics3 Group"},
]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]

[project.optional-dependencies]

# Packages used to test project
dev = [
   "pytest",
   "pytest-django"
]

# Full set of Mathics3 modules
full = [
     "Mathics3-Module-PyICU",
     "Mathics3-Module-nltk",
     "Mathics3-Module-networkx",
]

# Packages used in a Production server environment
production = [
     "daphne", # ASGI webserver for production use
     "whitenoise", # For serving static files under daphne
]


[project.scripts]
Mathics3server = "mathics_django.manage:main"

[project.urls]
Homepage = "https://mathics.org/"

[tool.setuptools.package-data]
"mathics_django" = [
    "autoload/*.m",
    "doc/*.pcl",
    "web/media/css/*.css",
    "web/media/doc/*.png",
    "web/media/img/*",
    "web/media/img/favicons/*",
    "web/media/fonts/*",
    "web/media/js/*.js",
    "web/media/js/**/*.js",
    "web/media/js/mathics-threejs-backend/**/*",
    "web/templates/**/*.html",
    "web/media/js/mathjax/**/*"
]

[tool.setuptools.dynamic]
version = {attr = "mathics_django.version.__version__"}
